save env file as json